<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/StarTasks_mine"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/star_tasks" />
        <item
            android:id="@+id/category_mine"
            android:enabled="true"
            android:title="@string/category"
            android:icon="@drawable/ic_baseline_category_24"
            app:actionLayout="@layout/spinner"
            >

        </item>

        <item
            android:id="@+id/Theme_mine"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_color_lens_24"
            android:title="@string/theme" />
        <item
            android:id="@+id/FAQ_mine"
            android:enabled="true"
            android:icon="@drawable/ic_outline_speaker_notes_24"
            android:title="@string/faq" />
        <item
            android:id="@+id/lang"
            android:enabled="true"
            android:title="@string/languages"
            android:icon="@drawable/ic_baseline_language_24"
            app:actionLayout="@layout/spinner_lang"
            />

    </group>

    <!--   <item android:title="communicate">-->
    <!--       <menu>-->
    <!--           <item android:id="@+id/t1"-->
    <!--               android:title="test 1"/>-->
    <!--           <item android:id="@+id/t2"-->
    <!--               android:title="test 2"/>-->
    <!--       </menu>-->
    <!--   </item>-->

</menu>